[build-system]
requires = ["uv_build >= 0.9.5, <0.10.0"]
build-backend = "uv_build"

[project]
name = "USASTATS"
version = "0.1.0"
description = "This package provides data cleaning and visualization tools for US statistics datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Rebekah Jensen", email = "rebekahdawnjensen@gmail.com"}
    { name = "Noah Champagne", email = "}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "streamlit>=1.40.0",
    "us",
    "plotly",
    "time",
    "requests",
    "httpx",
    "geopandas",
    "Point"
]